[package]
name = "rust_learning"
version = "0.1.0"
authors = ["Xiaobin Li <l_xb@foxmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "rary"
path = "src/rary.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
libc = "0.2"

[build-dependencies]
cc = "1.0"
