[package]
authors = ["Xiaobin Li <l_xb@foxmail.com>"]
build = "build.rs"
edition = "2018"
name = "rust_learning"
version = "0.1.0"

[lib]
name = "rary"
path = "src/rary.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rand = "0.7"

[build-dependencies]
cc = "1.0"

[workspace]
members = [
  ".",

  # training
  "training/hello_bin",
  "training/hello_lib",
  "training/prostc",
]
