[package]
name = "kv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kv_server"
path = "src/server.rs"

[[bin]]
name = "kv_client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.11", features = ["net", "macros", "rt-multi-thread"] }
prost = "0.8"
anyhow = "1.0"
dashmap = "4.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
bytes = "1.1"

[build-dependencies]
prost-build = "0.8"
