[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pow_client"
path = "src/client.rs"

[[bin]]
name = "pow_server"
path = "src/server.rs"

[dependencies]
prost = "0.10"
tonic = "0.7"
anyhow = "1"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tonic-build = "0.7"
